--- a/plugin.xml
+++ b/plugin.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
+<e107Plugin name="Contact Page Extended" lan="LAN_CP_NAME" version="1.1" date="2017-04-10" compatibility="2.0" installRequired="true" >
 	<author name="Jimako" url="http://www.e107.sk/" />
-	<summary lan="">Contact page extended</summary>
-	<description lan="">Contact page extended</description>
+	<summary lan="LAN_CP_SUMMARY">Contact page extended</summary>
+	<description lan="LAN_CP_DESCRIPTION">Contact page extended</description>
 	<keywords>
 		<word>information</word>
 		<word>contact</word>
